--- a/ArcTouch.Cinephile/Views/UpcomingView.xaml
+++ b/ArcTouch.Cinephile/Views/UpcomingView.xaml
@@ -6,50 +6,83 @@
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              BackgroundColor="Black">
     <ContentPage.Content>
-        <ListView x:Name="list" RowHeight="200" CachingStrategy="RetainElement">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <RelativeLayout>
-                            
-                            <ActivityIndicator IsRunning="True"
-                                   RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=.5, Constant=-20}"
-                                   RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=.5, Constant=-20}"
-                                   />
+      
+      <RelativeLayout>
 
-                            <ffimageloading:CachedImage 
-                                   Aspect="AspectFill"
-                                   RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=0}"
-                                   RelativeLayout.YConstraint="{ConstraintExpression Type=Constant, Constant=0}"
-                                   RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=0}"
-                                   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=0}"
-                                   DownsampleToViewSize="false"
-                                   Source="{Binding Movie.BackdropPath}">
-                            </ffimageloading:CachedImage>
+          <ListView x:Name="list"
+                RowHeight="200"
+                CachingStrategy="RetainElement"
+                RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                RelativeLayout.YConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=0}"
+                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=0}"
+                >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <RelativeLayout>
+                            
+                                <ActivityIndicator IsRunning="True"
+                                       RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=.5, Constant=-20}"
+                                       RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=.5, Constant=-20}"
+                                       />
+
+                                <ffimageloading:CachedImage 
+                                       Aspect="AspectFill"
+                                       RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                                       RelativeLayout.YConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                                       RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=0}"
+                                       RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=0}"
+                                       DownsampleToViewSize="false"
+                                       Source="{Binding Movie.BackdropPath}">
+                                </ffimageloading:CachedImage>
                           
-                            <Label Text="{Binding Movie.Title}"
-                                   FontAttributes="Bold"
-                                   FontSize="Medium"
-                                   FontFamily="Roboto"
-                                   LineBreakMode="TailTruncation"
-                                   RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=20}"
-                                   RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-50}"
-                                   RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=-40}"
-                                   TextColor="White"
-                                   />
+                                <Label Text="{Binding Movie.Title}"
+                                       FontAttributes="Bold"
+                                       FontSize="Medium"
+                                       FontFamily="Roboto"
+                                       LineBreakMode="TailTruncation"
+                                       RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=20}"
+                                       RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-50}"
+                                       RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=-40}"
+                                       TextColor="White"
+                                       />
 
-                            <Label Text="{Binding ReleaseDate}"
-                                   FontSize="Small"
-                                   FontFamily="Roboto"
-                                   RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=20}"
-                                   RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-30}"
-                                   TextColor="White"
-                                   />
+                                <Label Text="{Binding ReleaseDate}"
+                                       FontSize="Small"
+                                       FontFamily="Roboto"
+                                       RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=20}"
+                                       RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-30}"
+                                       TextColor="White"
+                                       />
                             
-                        </RelativeLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                            </RelativeLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+        <BoxView x:Name="bgSearchBar" BackgroundColor="White" Opacity=".5" HeightRequest="50" IsVisible="false"
+          RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+          RelativeLayout.YConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+          RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=0}"
+                  />
+
+        <SearchBar x:Name="searchBar" TextColor="#C62828" HeightRequest="50" IsVisible="false"
+                RelativeLayout.XConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                RelativeLayout.YConstraint="{ConstraintExpression Type=Constant, Constant=0}"
+                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=0}"
+                />
+
+        <Image x:Name="search"
+                Source="search.png"
+                RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1, Constant=-85}"
+                RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-85}"
+                RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant, Constant=65}"
+                RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant, Constant=65}"
+                />
+
+        </RelativeLayout>
+      
     </ContentPage.Content>
 </arc:BaseView>
